# murdlemysterysolver

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/murdle_solver/: __init__.py  main.py
tests/: test_solver.py
