[project]
name = "murdle-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lars Petter Hauge", email = "larsenhauge@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
murdle-solver = "murdle_solver:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
