[project]
name = "murdle-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lars Petter Hauge", email = "larsenhauge@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.8",
]

[project.scripts]
murdle-solver = "murdle_solver:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
]
